# Body-Stress-Inference

./: .gitignore  README.md  pyproject.toml  requirements.txt
body-stress-inference/: .gitignore  README.md
body-stress-inference-python/: README.md  calcUtilities.py  main.py  pose.py  rebaAnalysis.py  reba_analysis.py  server.py
body-stress-inference/Assets/: Backdrop.prefab  Legend.prefab  male-rigged-full-Unity-Ready.prefab  updateScore.cs
body-stress-inference/Assets/BlenderModels/: Base Mesh sculpt 2.blend  Base Mesh sculpt 2.blend1  MaleSplitUp.fbx
body-stress-inference/Assets/Meshes/: MaleCutUpHigherKnee.blend  MaleCutUpHigherKnee.blend1  MaleCutUpHigherKnee.fbx  MaleSplitUp.fbx  ManMeshWIthLimbsButLegs.blend  female-character-rig-unity.fbx  male-rigged-full-Unity-Ready.fbx  male-rigged-full-Unity-Ready.prefab
body-stress-inference/Assets/Prefabs/: Average REBA Score Analysis_.prefab  AverageREBAScore.prefab  MaleSplitUp.prefab  REBA RISK.prefab  RigController.prefab  StartREBAAnalysis.prefab  male-rigged-full-Unity-Ready.prefab
body-stress-inference/Assets/Scenes/: Result Scene.unity  ResultScene.unity  SampleScene.unity  Start Scene.unity  StartScene.unity
body-stress-inference/Assets/Scripts/: ColorREBARisk.cs  RigBone.cs  RigControl.cs  SceneController.cs  SocketConnection.cs  updateREBAScore.cs
body-stress-inference/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
body-stress-interface-python/: main.py
body_stress_inference-python/: blaze_pose_detection.py
tests/: test_body_stress_inference.py
(+4 files in other folders)
