[tool.poetry]
name = "Body-Stress-Inference"
version = "0.1.0"
description = ""
authors = ["Hamza Kamal <samiak@sfu.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "^0.8.10"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
